--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -13,5 +13,19 @@
   </div>
 <% end %>
 
+<h1>Ajouter un avis</h1>
+
+<%= simple_form_for [@restaurant, @review] do |f| %>
+
+<div class="form-input">
+  <%= f.input :rating %>
+  <%= f.input :content %>
+</div>
+
+<div class="form-actions">
+  <%= f.button :submit %>
+</div>
+<% end %>
+
 <%= link_to 'Retourner à la liste des restaurants', restaurants_path %>
 <%= link_to 'Ajouter un avis', new_restaurant_review_path(@restaurant) %>
